code entry to graal native-image